[FIX] web_gantt: fix the right border of the total_row highlight on hover
Currently the right border of the total_row highlight on hover is not
aligned with the border of the grid view

So in this commit align the total_row highlight border with the grid
view by adding the right margin on total and removing width of margin
from total width also fix the scrollbar due to border-right on last row
hover.

Closes: https://github.com/odoo/enterprise/pull/21206
Task-2657391

closes odoo/enterprise#21782

X-original-commit: bb21118d50234cf4fd50262a15f8d21ce94950c1
Related: odoo/odoo#78627

--- a/web_gantt/static/src/scss/web_gantt.scss
+++ b/web_gantt/static/src/scss/web_gantt.scss
@@ -559,7 +559,12 @@ $gantt-unavailability-bg: $gray-200;
                 height: 100vh;
                 content: '';
                 pointer-events: none;
+                z-index: 1;
             }
+        }
+        .o_gantt_cell:last-child .o_gantt_pill_wrapper:hover:before {
+            border-right: 0px;
+            right: 0;
         }
     }
 
